# eagerx_tutorials

./: .coveragerc  .gitignore  CHANGELOG.md  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
eagerx_tutorials/: __init__.py  animate.py  colab_render.py  helper.py  render_node.py  training.ipynb
eagerx_tutorials/pendulum/: __init__.py  converters.py  engine_nodes.py  engine_states.py  gym_implementation.py  layover.py  objects.py  overlay.py  pendulum_ode.py  pendulum_render.py  pid.py  processor.py  reset.py
eagerx_tutorials/pendulum/ode/: __init__.py  engine_nodes.py
eagerx_tutorials/quadruped/: cartesian_control.py  cpg_gait.py  engine_nodes.py  evaluate.py  hopf_network.py  object.py  overlay.py
eagerx_tutorials/quadruped/go1/: configs_go1.py
scripts/: roscore  roslab  run_tests.sh  scratch_refactor.py  setup_colab.sh
tests/: advanced_usage.py  getting_started.py  notebook.py  notebook_gifs.py  quadruped.py  quadruped_notebook.py  test_gymbridge.py  test_gymengine.py  test_import.py  test_notebooks.py  test_pendulum.py  test_quadruped.py
tutorials/: tutorial_1.ipynb
tutorials/auth/: README.rst  summer_school_auth.ipynb
tutorials/auth/figures/: differences.excalidraw  pendulum.excalidraw
tutorials/icra/: advanced_usage.ipynb  getting_started.ipynb
tutorials/icra/solutions/: sol_advanced_usage.ipynb  sol_getting_started.ipynb
tutorials/icra/solutions/videos/: pretrained-step-0-to-step-500.meta.json
tutorials/icra/videos/: -step-0-to-step-500.meta.json  pretrained-step-0-to-step-500.meta.json
tutorials/pendulum/: 1_environment_creation.ipynb  2_reset_and_step.ipynb  3_converters.ipynb  3_space_and_processors.ipynb  4_nodes.ipynb  5_bridge_implementation.ipynb  5_engine_implementation.ipynb  6_objects.ipynb  6_rendering.ipynb  7_rendering.ipynb  7_reset_routine.ipynb  8_reset_routine.ipynb  helper.py  node.py  pendulum_1.ipynb  pendulum_2.ipynb
tutorials/pendulum/solutions/: 2_reset_and_step.ipynb  3_converters.ipynb  3_space_and_processors.ipynb  4_nodes.ipynb  5_engine_implementation.ipynb  6_objects.ipynb  6_rendering.ipynb  7_rendering.ipynb  7_reset_routine.ipynb  8_reset_routine.ipynb
