[tool.poetry]
name = "eagerx_tutorials"
version = "0.1.26"
license = "Apache2.0"
description = "Tutorials on how to use EAGERx."
authors = ["Jelle Luijkx <j.d.luijkx@tudelft.nl>", "Bas van der Heijden <d.s.vanderheijden@tudelft.nl>"]
homepage = "https://github.com/eager-dev/eagerx_tutorials"
repository = "https://github.com/eager-dev/eagerx_tutorials"
documentation = "https://eagerx.readthedocs.io/en/master/"
include = ["scripts"]

[tool.poetry.dependencies]
python = "^3.7"
eagerx = "^0.1.37"
eagerx-ode = "^0.1.26"  # todo: bump to 0.1.27
eagerx-pybullet = "^0.1.11"
#stable-baselines3 = { version="^2.0.0a13", allow-prereleases = true } # todo: bump to 2.0.0a?
jupyterlab = "^3.3.4"
nbconvert = "^6.5.0"
PyVirtualDisplay = "^3.0"
#sb3-contrib = { version="^2.0.0a13", allow-prereleases = true } # todo: bump to 2.0.0a?
ipywidgets = "^7.7.0"
tqdm = "^4.64.0"
setuptools = "<=65.5.0"
shimmy = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.1"
pytest-cov = "^3.0.0"
flake8 = ">=3"
flake8-bugbear = "^22.4.25"
pytest-xvfb = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "eagerx_tutorials/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
