[metadata]
# This includes the license file in the wheel.
license_file = LICENSE

[tool:pytest]
# Deterministic ordering for tests; useful for pytest-xdist.

[flake8]
ignore = W503,W504,E203,E231,E501  # line breaks before and after binary operators
# Ignore import not used when aliases are defined
exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    # This contains builds of flake8 that we don't want to check
    dist
		*.egg-info
# Set to 15?
max-complexity = 30
# The GitHub editor is 127 chars wide
max-line-length = 127
